# smart_rover

./: .gitignore  LICENSE  README.md
src/smart_arduino/: CMakeLists.txt  package.xml
src/smart_arduino/launch/: arduino.launch
src/smart_arduino/libraries/: readme.txt
src/smart_arduino/libraries/BricktronicsMotor/: BricktronicsMotor.h
src/smart_arduino/libraries/BricktronicsMotor/utility/: PID_v1.h
src/smart_arduino/src/: src.ino
src/smart_bringup/: CMakeLists.txt  package.xml
src/smart_bringup/launch/: robot.launch  robot_ghost.launch
src/smart_camera/: CMakeLists.txt  package.xml
src/smart_camera/launch/: camera.launch
src/smart_camera_controller/: CMakeLists.txt  package.xml
src/smart_camera_controller/launch/: camera_controller.launch
src/smart_camera_controller/src/: camera_controller.cpp
src/smart_controller/: CMakeLists.txt  package.xml
src/smart_controller/include/smart_controller/: controller.h  differential_drive_controller.h  four_wheel_steer_controller.h  motion_parameters.h  point_turn_drive_controller.h  vehicle_control_interface.h
src/smart_controller/launch/: controller.launch  controller_four_wheel.launch  controller_point_turn.launch
src/smart_controller/src/: controller.cpp
src/smart_description/: CMakeLists.txt  package.xml
src/smart_description/launch/: cfg.rviz  smart.launch
src/smart_description/lego/: smart.lxf  smart_base.lxf  smart_mast.lxf  smart_wheel.lxf  smart_wheel_suspension.lxf
src/smart_description/meshes/: smart_wheel.dae  smart_wheel.stl  smart_wheel_suspension.dae  smart_wheel_suspension.stl
src/smart_description/urdf/: inertia_tensors.urdf.xacro  smart.urdf.xacro  smart_base.urdf.xacro  smart_camera_mast.urdf.xacro  smart_parameters.urdf.xacro  smart_wheel.urdf.xacro  smart_wheel_steering.urdf.xacro  smart_wheel_suspension.urdf.xacro
src/smart_driver/: CMakeLists.txt  package.xml
src/smart_driver/include/smart_driver/: driver.h
src/smart_driver/launch/: driver.launch
src/smart_driver/src/: driver.cpp
src/smart_gazebo/: CMakeLists.txt  package.xml
src/smart_gazebo/launch/: spawn_smart_base.launch  spawn_smart_base_empty_world.launch
src/smart_gazebo/urdf/: smart_base_controllers.urdf.xacro  smart_gazebo.urdf.xacro  smart_materials.urdf.xacro
src/smart_gazebo_plugins/: CMakeLists.txt  package.xml
src/smart_gazebo_plugins/include/smart_gazebo_plugins/: all_wheel_steering_plugin.h
src/smart_gazebo_plugins/src/: all_wheel_steering_plugin.cpp
src/smart_hardware_interface/: CMakeLists.txt  package.xml
src/smart_hardware_interface/config/: controllers.yaml  hardware.yaml
src/smart_hardware_interface/include/smart_hardware_interface/: hardware_interface.h
src/smart_hardware_interface/launch/: hardware_interface.launch
src/smart_hardware_interface/src/: hardware_interface.cpp
src/smart_joystick/: CMakeLists.txt  package.xml
src/smart_joystick/config/: common.yaml  xbox_controller.yaml
src/smart_joystick/launch/: joystick.launch  xbox_controller.launch
src/smart_joystick/src/: joystick.cpp
src/smart_juno_interface/: CMakeLists.txt  package.xml
src/smart_juno_interface/launch/: juno_interface.launch
src/smart_msgs/: CMakeLists.txt  package.xml
src/smart_msgs/msg/: MotionCommand.msg  MotorCommand.msg  RawSensors.msg  Ultrasonic.msg  UltrasonicSensors.msg
src/smart_ros_controller/: CMakeLists.txt  package.xml  smart_ros_controller_plugins.xml
src/smart_ros_controller/include/smart_ros_controller/: all_wheel_steering_controller.h
src/smart_ros_controller/src/: all_wheel_steering_controller.cpp
