<?xml version="1.0"?>
<package format="2">
  <name>smart_camera</name>
  <version>0.0.0</version>
  <description>The smart_camera package</description>

   <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="Thorsten.Graber@gmail.com">Thorsten Graber</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/smart_camera</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- <author email="Thorsten.Graber@gmail.com">Thorsten Graber</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <depend>roscpp</depend>
  <depend>usb_cam</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
