<?xml version="1.0"?>
<package format="2">
  <name>smart_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The smart_gazebo_plugins package</description>

   <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="Thorsten.Graber@gmail.com">Thorsten Graber</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/smart_gazebo_plugins</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- <author email="Thorsten.Graber@gmail.com">Thorsten Graber</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <depend>smart_msgs</depend>
  <depend>roscpp</depend>
  <depend>gazebo_ros</depend>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" />
  </export>
</package>
