<?xml version="1.0"?>
<package format="2">
  <name>smart_hardware_interface</name>
  <version>0.0.0</version>
  <description>The smart_hardware_interface package</description>

   <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="Thorsten.Graber@gmail.com">Thorsten Graber</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/smart_hardware_interface</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- <author email="Thorsten.Graber@gmail.com">Thorsten Graber</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <depend>roscpp</depend>
  <depend>hardware_interface</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>actionlib</depend>
  <depend>pluginlib</depend>
  <depend>transmission_interface</depend>
  <depend>urdf</depend>
  <depend>smart_msgs</depend>
  <depend>smart_description</depend>
  <depend>joint_limits_interface</depend>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
