<?xml version="1.0"?>
<package format="2">
  <name>smart_ros_controller</name>
  <version>0.0.0</version>
  <description>The smart_ros_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="Thorsten.Graber@gmail.com">Thorsten Graber</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- <url type="website">http://wiki.ros.org/smart_driver</url> -->

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- <author email="Thorsten.Graber@gmail.com">Thorsten Graber</author> -->

  <depend>controller_interface</depend>
  <depend>nav_msgs</depend>
  <depend>smart_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf_geometry_parser</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <controller_interface plugin="${prefix}/smart_ros_controller_plugins.xml"/>
  </export>
</package>
